--- a/_config.yml
+++ b/_config.yml
@@ -16,16 +16,16 @@ minimal_mistakes_skin    : "default" # "air", "aqua", "contrast", "dark", "dirt"
 
 # Site Settings
 locale                   : "en-US"
-title                    : "Site Title"
+title                    : "CK's Technology News"
 title_separator          : "-"
 name                     : "Your Name"
-description              : "An amazing website."
+description              : "Tech News from a strange guy!"
 url                      : # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : # the subpath of your site, e.g. "/blog"
 repository               : # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
 teaser                   : # path of fallback teaser image, e.g. "/assets/images/500x300.png"
 # breadcrumbs            : false # true, false (default)
-words_per_minute         : 200
+words_per_minute         : 230
 comments:
   provider               : # false (default), "disqus", "discourse", "facebook", "google-plus", "staticman", "staticman_v2" "custom"
   disqus:
@@ -256,7 +256,8 @@ compress_html:
     envs: development
 
 
-# Defaults
+# Post
+# https://mmistakes.github.io/minimal-mistakes/docs/posts/
 defaults:
   # _posts
   - scope:
@@ -266,6 +267,31 @@ defaults:
       layout: single
       author_profile: true
       read_time: true
-      comments: # true
+      comments: true
       share: true
       related: true
+
+
+# Pages 
+# https://mmistakes.github.io/minimal-mistakes/docs/pages/
+defaults:
+  # _pages
+  - scope:
+      path: ""
+      type: pages
+    values:
+      layout: single
+      author_profile: true
+
+
+# Collections
+# https://mmistakes.github.io/minimal-mistakes/docs/collections/
+defaults:
+  # _portfolio
+  - scope:
+      path: ""
+      type: portfolio
+    values:
+      layout: single
+      author_profile: false
+      share: true
