--- a/_config.yml
+++ b/_config.yml
@@ -95,8 +95,8 @@ author:
   bio              : "Just another boring, tattooed, time traveling, designer."
   location         : "Swiss"
   email            :
-  uri              : "https://chef-koch.github.io/"
-  home             : "https://chef-koch.github.io/"
+  uri              : "https://chef-koch.github.io"
+  home             : "https://chef-koch.github.io"
   bitbucket        :
   codepen          :
   dribbble         :
