--- a/.travis.yml
+++ b/.travis.yml
@@ -2,10 +2,13 @@ language: ruby
 cache: bundler
 gemfile: Gemfile
 script:
-  - bundle exec jekyll algolia --source docs --destination docs/_site --config docs/_config.yml
+  - bundle exec jekyll build
+  - bundle exec htmlproofer ./_site --only-4xx --check-favicon --check-html --config _config.yml
 branches:
   only:
-    # Change this to gh-pages if you're deploying using the gh-pages branch
     - master
 rvm:
  - 2.4
+ env:
+  global:
+    - NOKOGIRI_USE_SYSTEM_LIBRARIES=true # speeds up installation of html-proofer
