--- a/.travis.yml
+++ b/.travis.yml
@@ -1,16 +1,11 @@
 language: ruby
-rvm:
- - 2.4
 cache: bundler
-gemfile: Gemfile
+gemfile: docs/Gemfile
+script:
+  - bundle exec jekyll algolia --source docs --destination docs/_site --config docs/_config.yml
 branches:
   only:
+    # Change this to gh-pages if you're deploying using the gh-pages branch
     - master
- env:
-  global:
-    - NOKOGIRI_USE_SYSTEM_LIBRARIES=true # speeds up installation of html-proofer
-script:
-  - bundle exec jekyll build
-  - bundle exec htmlproofer ./_site --only-4xx --check-favicon --check-html --config _config.yml
-  - bundle exec rake test
-  
+rvm:
+ - 2.4
