--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,5 @@
-remote_theme             : "mmistakes/minimal-mistakes"
+theme             : "minimal-mistakes-jekyll"
+# remote_theme             : "mmistakes/minimal-mistakes"
 minimal_mistakes_skin    : "dirt" # Avbl. "air", "aqua", "contrast", "dark", "dirt", "neon", "mint", "plum", "sunrise"
 
 # CK's Technology Site Settings
