--- a/.travis.yml
+++ b/.travis.yml
@@ -2,10 +2,10 @@ language: ruby
 cache: bundler
 gemfile: Gemfile
 script:
-  - bundle exec jekyll build 
-  bundle exec htmlproofer ./_site --disable-external
+  - bundle exec jekyll build --destination ./_site --config 
+  - bundle exec htmlproofer ./_site --disable-external
   #--config _config.yml
-  #-- algolia --source docs --destination docs/_site --config docs/_config.yml
+  #-- algolia --source docs --destination _site --config docs/_config.yml
 branches:
   only:
     - master
