--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -1,7 +1,7 @@
 # Authors
 
-Billy Rick:
-  name        : "Billy Rick"
+CHEF-KOCH:
+  name        : "CHEF-KOCH"
   uri         : "http://thewhip.com"
   email       : "billy@rick.com"
   bio         : "What do you want, jewels? I am a very extravagant man."
