--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "url": "git://github.com/mmistakes/minimal-mistakes.git"
   },
   "keywords": ["jekyll", "theme", "minimal"],
-  "author": "Michael Rose",
+  "author": "CHEF-KOCH",
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/mmistakes/minimal-mistakes/issues"
