parsing error fixed
Signed-off-by: CHEF-KOCH <CHEF-KOCH@Protonmail.com>

--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,6 @@
-theme                    : "minimal-mistakes-jekyll"
-# remote_theme           : "mmistakes/minimal-mistakes"
+# Default look of the website
+# theme                    : "minimal-mistakes-jekyll"
+remote_theme           : "mmistakes/minimal-mistakes"
 minimal_mistakes_skin    : "dirt" # Avbl. "air", "aqua", "contrast", "dark", "dirt", "neon", "mint", "plum", "sunrise"
 
 # CK's Technology Site Settings
