--- a/.travis.yml
+++ b/.travis.yml
@@ -4,11 +4,9 @@ gemfile: Gemfile
 before_install:
 - gem install bundler
 script:
-  - bundle exec jekyll build --destination ./_site --config 
+  - bundle exec jekyll algolia --source docs --destination docs/_site --config ./_config.yml
   - bundle exec htmlproofer ./_site --disable-external
-  - bundle exec jekyll algolia 
-  #--config _config.yml
-  #-- algolia --source _pages --destination _site --config docs/_config.yml
+  #- bundle exec jekyll algolia 
 branches:
   only:
     - master
