--- a/.travis.yml
+++ b/.travis.yml
@@ -4,8 +4,8 @@ gemfile: Gemfile
 before_install:
 - gem install bundler
 script:
-  - bundle exec jekyll algolia --source _posts --destination _posts./site --config _config.yml
-  #- bundle exec jekyll algolia --source _docs --destination _docs./_site --config docs/_config.yml
+  - bundle exec jekyll algolia push --source _posts -config _config.yml
+  #- bundle exec jekyll algolia --source _posts --destination _posts/_site --config _config.yml
   - bundle exec htmlproofer ./_site --disable-external
 branches:
   only:
