--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,12 +1,17 @@
-# main links
 main:
-  #- title: "Quick-Start Guide"
-  #  url: https://mmistakes.github.io/minimal-mistakes/docs/quick-start-guide/
-  # - title: "About"
-  #   url: https://mmistakes.github.io/minimal-mistakes/about/
-   - title: "Year Archive"
-     url: /year-archive/
-  # - title: "Sample Collections"
-  #   url: /collection-archive/
-   - title: "Sitemap"
-     url: /sitemap/
+  - title: "About"
+    url: /about/
+  - title: "Pages"
+    url: /pages/
+  - title: "Categories"
+    url: /categories/
+  - title: "Contact"
+    url: /contact/
+  - title: "Support"
+    url: /support/
+  - title: "Collections"
+    url: /collection-archive/
+  - title: "Changelog"
+    url: /year-archive/
+  - title: "Station-Drivers"
+    url: https://station-drivers.com
