--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -1,18 +1,19 @@
-# Authors
+# Authors + Guest Authors#
+# fixme: email protection
 
 CHEF-KOCH:
   name        : "CHEF-KOCH"
-  uri         : "http://thewhip.com"
-  email       : "billy@rick.com"
+  uri         : "http://CHEF-KOCH.github.io"
+  email       : "CHEF-KOCH@protonmail.com"
   bio         : "What do you want, jewels? I am a very extravagant man."
   avatar      : "/assets/images/bio-photo-2.jpg"
-  twitter     : "extravagantman"
-  google_plus : "BillyRick"
+  twitter     : "CKsTechNews"
+  #google_plus : ""
 
-Cornelius Fiddlebone:
-  name        : "Cornelius Fiddlebone"
-  email       : "cornelius@thewhip.com"
-  bio         : "I ordered what?"
-  avatar      : "/assets/images/bio-photo.jpg"
-  twitter     : "rhymeswithsackit"
-  google_plus : "CorneliusFiddlebone"
+#Cornelius Fiddlebone:
+#  name        : "Cornelius Fiddlebone"
+#  email       : "cornelius@thewhip.com"
+#  bio         : "I ordered what?"
+#  avatar      : "/assets/images/bio-photo.jpg"
+#  twitter     : "rhymeswithsackit"
+#  google_plus : "CorneliusFiddlebone"
