--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@ baseurl                  : # the subpath of your site, e.g. "/blog"
 repository               : CHEF-KOCH/CHEF-KOCH.github.io # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
 teaser                   : /assets/images/interface.jpg # path of fallback teaser image, e.g. "/assets/images/500x300.png"
 remote_theme             : "mmistakes/minimal-mistakes"
-# breadcrumbs            : false # true, false (default)
+breadcrumbs              : true #false (default)
 words_per_minute         : 220
 comments:
   provider               : staticman_v2 # false (default), "disqus", "discourse", "facebook", "google-plus", "staticman", "staticman_v2" "custom"
@@ -69,9 +69,9 @@ naver_site_verification  : AAAAOtwlDIS1qZ6/S1xeS6V6XqIZqNzEcqccwYKCokspmRlm1tMOu
 
 # Social Sharing
 twitter:
-  username               : CKsTechNews
+  username               : "CKsTechNews"
 facebook:
-  username               : CHEF-KOCH
+  username               : "CHEF-KOCH"
   app_id                 :
   publisher              :
 og_image                 : /assets/images/interface.jpg # Open Graph/Twitter default site image
@@ -85,10 +85,12 @@ social:
     - "https://www.linkedin.com/in/ck-s-technology-news-ab7a25164/" #fixme
   #  - "https://medium.com/" #fixme
     - "https://github.com/CHEF-KOCH"
+    - "https://www.tumblr.com/CKsTechnologyBlog"
+  #  - "https://path.com/CK's Technology News" #fixme
 
 # Analytics
 analytics:
-  provider               : custom # false (default), "google", "google-universal", "custom"
+  provider               : google-universal # false (default), "google", "google-universal" or "custom"
   google:
     tracking_id          : UA-27980244-3
     anonymize_ip         : true # false (default)
@@ -201,7 +203,7 @@ sass:
 
 # Outputting
 permalink: /:categories/:title/
-paginate: 5 # amount of posts to show
+paginate: 8 # amount of posts to show
 paginate_path: /page:num/
 timezone: # https://en.wikipedia.org/wiki/List_of_tz_database_time_zones
 
@@ -253,11 +255,11 @@ tag_archive:
 
 
 # HTML Compression
-# - http://jch.penibelst.de/
+# CDN services such as CloudFlare provide optional automatic minification for HTML, CSS, and JavaScript. If you are serving your site via such a service and have minification enabled, this configuration might be redundant.
 compress_html:
   clippings: all
   ignore:
-    envs: development
+    envs: development #disable compression in dev environment
 
 
 # Defaults
