--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,15 +1,9 @@
-# Navigation bar
+# main links
 main:
-   - title: "About Me"
-     url: /about/
-   - title: "Archives"
-     url: /posts/
-   - title: "Contact"
-     url: /contact/
-   - title: "Support"
-     url: /support/
-  # - title: "Join Newsletter"
-  #   url: https://upscri.be/ #fixme
+  - title: "Quick-Start Guide"
+    url: https://mmistakes.github.io/minimal-mistakes/docs/quick-start-guide/
+  # - title: "About"
+  #   url: https://mmistakes.github.io/minimal-mistakes/about/
   # - title: "Sample Posts"
   #   url: /year-archive/
   # - title: "Sample Collections"
