--- a/.htaccess
+++ b/.htaccess
@@ -986,75 +986,75 @@ RewriteRule . $1/ [R=301,L]
 # Feed redirects
 # ----------------------------------------------------------------------
 
-redirect 301 /atom/ https://CHEF-KOCH.github.io/atom.xml
-redirect 301 /rss/ https://CHEF-KOCH.github.io/atom.xml
-redirect 301 /feed.xml https://CHEF-KOCH.github.io/atom.xml
-redirect 301 /everything.xml https://CHEF-KOCH.github.io/atom.xml
-redirect 301 /articles-feed.xml https://CHEF-KOCH.github.io/articles.xml
-redirect 301 /mastering-paper-feed.xml https://CHEF-KOCH.github.io/mastering-paper.xml
-redirect 301 /paperfaces-feed.xml https://CHEF-KOCH.github.io/paperfaces.xml
+#redirect 301 /atom/ https://CHEF-KOCH.github.io/atom.xml
+#redirect 301 /rss/ https://CHEF-KOCH.github.io/atom.xml
+#redirect 301 /feed.xml https://CHEF-KOCH.github.io/atom.xml
+#redirect 301 /everything.xml https://CHEF-KOCH.github.io/atom.xml
+#redirect 301 /articles-feed.xml https://CHEF-KOCH.github.io/articles.xml
+#redirect 301 /mastering-paper-feed.xml https://CHEF-KOCH.github.io/mastering-paper.xml
+#redirect 301 /paperfaces-feed.xml https://CHEF-KOCH.github.io/paperfaces.xml
 
 # ----------------------------------------------------------------------
 # Sitemap redirects
 # ----------------------------------------------------------------------
 
-redirect 301 /sitemap.xml.gz https://CHEF-KOCH.github.io/sitemap.xml
-redirect 301 /post-sitemap.xml https://CHEF-KOCH.github.io/sitemap.xml
-redirect 301 /category-sitemap.xml https://CHEF-KOCH.github.io/sitemap.xml
+#redirect 301 /sitemap.xml.gz https://CHEF-KOCH.github.io/sitemap.xml
+#redirect 301 /post-sitemap.xml https://CHEF-KOCH.github.io/sitemap.xml
+#redirect 301 /category-sitemap.xml https://CHEF-KOCH.github.io/sitemap.xml
 
 # ----------------------------------------------------------------------
 # Page redirects
 # ----------------------------------------------------------------------
 
 #RedirectMatch permanent /lifestream https://CHEF-KOCH.github.io/articles/
-redirect 301 /about-made-mistakes/ https://CHEF-KOCH.github.io/about/
-redirect 301 /articles/face https://CHEF-KOCH.github.io/articles/paperfaces-ipad-portrait-project/
-redirect 301 /articles/faces-made-with-paper-ipad https://CHEF-KOCH.github.io/articles/paperfaces-ipad-portrait-project/
-redirect 301 /articles/paperfaces-portrait-gallery https://CHEF-KOCH.github.io/paperfaces/
-redirect 301 /paperfaces/slave-leia-jabba-the-hutt https://CHEF-KOCH.github.io/paperfaces/slave-leia-jabba-the-hutt-portrait/
-redirect 301 /paperfaces/lorenzo-raffio-portrait/ https://CHEF-KOCH.github.io/paperfaces/lorenzo-portrait/
-redirect 301 /paperfaces/lorenzo-raffio-portrait https://CHEF-KOCH.github.io/paperfaces/lorenzo-portrait/
-redirect 301 /tags https://CHEF-KOCH.github.io/tag/
-redirect 301 /tag/baby/ https://CHEF-KOCH.github.io/tag/twins/
-redirect 301 /articles/mastering-paper-53-guide https://CHEF-KOCH.github.io/mastering-paper/
-redirect 301 /works https://CHEF-KOCH.github.io/work/
-redirect 301 /minimal-mistakes https://CHEF-KOCH.github.io/work/minimal-mistakes-jekyll-theme/
-redirect 301 /so-simple https://CHEF-KOCH.github.io/work/so-simple-jekyll-theme/
-redirect 301 /hpstr https://CHEF-KOCH.github.io/work/hpstr-jekyll-theme/
-redirect 301 /articles/paper-53-introduction https://CHEF-KOCH.github.io/mastering-paper/introduction-tool-guide/
-redirect 301 /articles/paper-53-drawing-trees https://CHEF-KOCH.github.io/mastering-paper/drawing-trees/
-redirect 301 /articles/paper-53-drawing-sky-clouds https://CHEF-KOCH.github.io/mastering-paper/drawing-clouds/
-redirect 301 /articles/paper-53-drawing-water-waves https://CHEF-KOCH.github.io/mastering-paper/drawing-water/
-redirect 301 /articles/paper-53-book-review https://CHEF-KOCH.github.io/mastering-paper/moleskine-book/
-redirect 301 /articles/paper-53-drawing-textures https://CHEF-KOCH.github.io/mastering-paper/drawing-textures/
-redirect 301 /articles/paper-53-basics https://CHEF-KOCH.github.io/mastering-paper/basics/
-redirect 301 /mastering-paper/basic https://CHEF-KOCH.github.io/mastering-paper/basics/
-redirect 301 /articles/madewithpaper-drawing-guide https://CHEF-KOCH.github.io/mastering-paper/short-guide/
-redirect 301 /articles/how-to-draw-hair-paper-53 https://CHEF-KOCH.github.io/mastering-paper/drawing-hair/
-redirect 301 /articles/drawing-faces-paper-53 https://CHEF-KOCH.github.io/mastering-paper/drawing-blank-faces/
-redirect 301 /articles/blend-first-look https://CHEF-KOCH.github.io/mastering-paper/pencil-first-look/
-redirect 301 /articles/blend-first-look/ https://CHEF-KOCH.github.io/mastering-paper/pencil-first-look/
-redirect 301 /articles/contour-drawing https://CHEF-KOCH.github.io/mastering-paper/contour-drawing/
-redirect 301 /articles/remix-me https://CHEF-KOCH.github.io/mastering-paper/mix/
-redirect 301 /articles/pencil-53-review https://CHEF-KOCH.github.io/mastering-paper/pencil-53-review/
-redirect 301 /drawing-textures https://CHEF-KOCH.github.io/mastering-paper/drawing-textures/
-redirect 301 /blog/those-city-folk-in-animal-crossing-still-love-the-gossip https://CHEF-KOCH.github.io/articles/animal-crossing-city-folk-impressions/
-redirect 301 /code-highlighting-post/ https://CHEF-KOCH.github.io/work/jekyll-themes/
-redirect 301 /tag/fiftythree https://CHEF-KOCH.github.io/tag/paper-by-53/
-redirect 301 /tag/fiftythree/ https://CHEF-KOCH.github.io/tag/paper-by-53/
-redirect 301 /portraits https://CHEF-KOCH.github.io/paperfaces/
-redirect 301 /portraits/ https://CHEF-KOCH.github.io/paperfaces/
-redirect 301 /articles/skinny-bones-jekyll/ https://CHEF-KOCH.github.io/work/skinny-bones-jekyll/
-redirect 301 /articles/skinny-bones-jekyll https://CHEF-KOCH.github.io/work/skinny-bones-jekyll/
-redirect 301 /articles/hpstr-jekyll-theme/ https://CHEF-KOCH.github.io/work/hpstr-jekyll-theme/
-redirect 301 /articles/so-simple-jekyll-theme/ https://CHEF-KOCH.github.io/work/so-simple-jekyll-theme/
-redirect 301 /articles/so-simple-jekyll-theme https://CHEF-KOCH.github.io/work/so-simple-jekyll-theme/
-redirect 301 /articles/minimal-mistakes-jekyll-theme/ https://CHEF-KOCH.github.io/work/minimal-mistakes-jekyll-theme/
-redirect 301 /articles/minimal-mistakes-jekyll-theme https://CHEF-KOCH.github.io/work/minimal-mistakes-jekyll-theme/
-redirect 301 /articles/pogo-connect-smart-pen/ https://CHEF-KOCH.github.io/mastering-paper/pogo-connect-smart-pen/
-redirect 301 /articles/pogo-connect-sensitivity/ https://CHEF-KOCH.github.io/mastering-paper/pogo-connect-sensitivity/
-redirect 301 /blog/ https://CHEF-KOCH.github.io/articles/
-redirect 301 /blog https://CHEF-KOCH.github.io/articles/
-redirect 301 /subscribe https://CHEF-KOCH.github.io/support/
-redirect 301 /subscribe/ https://CHEF-KOCH.github.io/support/
-redirect 301 /procreate-paintings/jenyy-x-portrait/ https://CHEF-KOCH.github.io/procreate-paintings/jenny-x-portrait/
+#redirect 301 /about-made-mistakes/ https://CHEF-KOCH.github.io/about/
+#redirect 301 /articles/face https://CHEF-KOCH.github.io/articles/paperfaces-ipad-portrait-project/
+#redirect 301 /articles/faces-made-with-paper-ipad https://CHEF-KOCH.github.io/articles/paperfaces-ipad-portrait-project/
+#redirect 301 /articles/paperfaces-portrait-gallery https://CHEF-KOCH.github.io/paperfaces/
+#redirect 301 /paperfaces/slave-leia-jabba-the-hutt https://CHEF-KOCH.github.io/paperfaces/slave-leia-jabba-the-hutt-portrait/
+#redirect 301 /paperfaces/lorenzo-raffio-portrait/ https://CHEF-KOCH.github.io/paperfaces/lorenzo-portrait/
+#redirect 301 /paperfaces/lorenzo-raffio-portrait https://CHEF-KOCH.github.io/paperfaces/lorenzo-portrait/
+#redirect 301 /tags https://CHEF-KOCH.github.io/tag/
+#redirect 301 /tag/baby/ https://CHEF-KOCH.github.io/tag/twins/
+#redirect 301 /articles/mastering-paper-53-guide https://CHEF-KOCH.github.io/mastering-paper/
+#redirect 301 /works https://CHEF-KOCH.github.io/work/
+#redirect 301 /minimal-mistakes https://CHEF-KOCH.github.io/work/minimal-mistakes-jekyll-theme/
+#redirect 301 /so-simple https://CHEF-KOCH.github.io/work/so-simple-jekyll-theme/
+#redirect 301 /hpstr https://CHEF-KOCH.github.io/work/hpstr-jekyll-theme/
+#redirect 301 /articles/paper-53-introduction https://CHEF-KOCH.github.io/mastering-paper/introduction-tool-guide/
+#redirect 301 /articles/paper-53-drawing-trees https://CHEF-KOCH.github.io/mastering-paper/drawing-trees/
+#redirect 301 /articles/paper-53-drawing-sky-clouds https://CHEF-KOCH.github.io/mastering-paper/drawing-clouds/
+#redirect 301 /articles/paper-53-drawing-water-waves https://CHEF-KOCH.github.io/mastering-paper/drawing-water/
+#redirect 301 /articles/paper-53-book-review https://CHEF-KOCH.github.io/mastering-paper/moleskine-book/
+#redirect 301 /articles/paper-53-drawing-textures https://CHEF-KOCH.github.io/mastering-paper/drawing-textures/
+#redirect 301 /articles/paper-53-basics https://CHEF-KOCH.github.io/mastering-paper/basics/
+#redirect 301 /mastering-paper/basic https://CHEF-KOCH.github.io/mastering-paper/basics/
+#redirect 301 /articles/madewithpaper-drawing-guide https://CHEF-KOCH.github.io/mastering-paper/short-guide/
+#redirect 301 /articles/how-to-draw-hair-paper-53 https://CHEF-KOCH.github.io/mastering-paper/drawing-hair/
+#redirect 301 /articles/drawing-faces-paper-53 https://CHEF-KOCH.github.io/mastering-paper/drawing-blank-faces/
+#redirect 301 /articles/blend-first-look https://CHEF-KOCH.github.io/mastering-paper/pencil-first-look/
+#redirect 301 /articles/blend-first-look/ https://CHEF-KOCH.github.io/mastering-paper/pencil-first-look/
+#redirect 301 /articles/contour-drawing https://CHEF-KOCH.github.io/mastering-paper/contour-drawing/
+#redirect 301 /articles/remix-me https://CHEF-KOCH.github.io/mastering-paper/mix/
+#redirect 301 /articles/pencil-53-review https://CHEF-KOCH.github.io/mastering-paper/pencil-53-review/
+#redirect 301 /drawing-textures https://CHEF-KOCH.github.io/mastering-paper/drawing-textures/
+#redirect 301 /blog/those-city-folk-in-animal-crossing-still-love-the-gossip https://CHEF-KOCH.github.io/articles/animal-crossing-city-folk-impressions/
+#redirect 301 /code-highlighting-post/ https://CHEF-KOCH.github.io/work/jekyll-themes/
+#redirect 301 /tag/fiftythree https://CHEF-KOCH.github.io/tag/paper-by-53/
+#redirect 301 /tag/fiftythree/ https://CHEF-KOCH.github.io/tag/paper-by-53/
+#redirect 301 /portraits https://CHEF-KOCH.github.io/paperfaces/
+#redirect 301 /portraits/ https://CHEF-KOCH.github.io/paperfaces/
+#redirect 301 /articles/skinny-bones-jekyll/ https://CHEF-KOCH.github.io/work/skinny-bones-jekyll/
+#redirect 301 /articles/skinny-bones-jekyll https://CHEF-KOCH.github.io/work/skinny-bones-jekyll/
+#redirect 301 /articles/hpstr-jekyll-theme/ https://CHEF-KOCH.github.io/work/hpstr-jekyll-theme/
+#redirect 301 /articles/so-simple-jekyll-theme/ https://CHEF-KOCH.github.io/work/so-simple-jekyll-theme/
+#redirect 301 /articles/so-simple-jekyll-theme https://CHEF-KOCH.github.io/work/so-simple-jekyll-theme/
+#redirect 301 /articles/minimal-mistakes-jekyll-theme/ https://CHEF-KOCH.github.io/work/minimal-mistakes-jekyll-theme/
+#redirect 301 /articles/minimal-mistakes-jekyll-theme https://CHEF-KOCH.github.io/work/minimal-mistakes-jekyll-theme/
+#redirect 301 /articles/pogo-connect-smart-pen/ https://CHEF-KOCH.github.io/mastering-paper/pogo-connect-smart-pen/
+#redirect 301 /articles/pogo-connect-sensitivity/ https://CHEF-KOCH.github.io/mastering-paper/pogo-connect-sensitivity/
+#redirect 301 /blog/ https://CHEF-KOCH.github.io/articles/
+#redirect 301 /blog https://CHEF-KOCH.github.io/articles/
+#redirect 301 /subscribe https://CHEF-KOCH.github.io/support/
+#redirect 301 /subscribe/ https://CHEF-KOCH.github.io/support/
+#redirect 301 /procreate-paintings/jenyy-x-portrait/ https://CHEF-KOCH.github.io/procreate-paintings/jenny-x-portrait/
