--- a/_data/ui-text.yml
+++ b/_data/ui-text.yml
@@ -7,7 +7,7 @@ en: &DEFAULT_EN
   pagination_previous        : "Previous"
   pagination_next            : "Next"
   breadcrumb_home_label      : "Home"
-  breadcrumb_separator       : "/"
+  breadcrumb_separator       : ">"
   menu_label                 : "Toggle Menu"
   toc_label                  : "On This Page"
   ext_link_label             : "Direct Link"
@@ -59,7 +59,7 @@ es: &DEFAULT_ES
   pagination_previous        : "Anterior"
   pagination_next            : "Siguiente"
   breadcrumb_home_label      : "Inicio"
-  breadcrumb_separator       : "/"
+  breadcrumb_separator       : ">"
   menu_label                 :
   toc_label                  : "Contenidos"
   ext_link_label             : "Enlace"
@@ -104,7 +104,7 @@ fr: &DEFAULT_FR
   pagination_previous        : "Précédent"
   pagination_next            : "Suivant"
   breadcrumb_home_label      : "Accueil"
-  breadcrumb_separator       : "/"
+  breadcrumb_separator       : ">"
   menu_label                 :
   toc_label                  : "Sur cette page"
   ext_link_label             : "Lien direct"
@@ -152,7 +152,7 @@ tr: &DEFAULT_TR
   pagination_previous        : "Önceki"
   pagination_next            : "Sonraki"
   breadcrumb_home_label      : "Ana Sayfa"
-  breadcrumb_separator       : "/"
+  breadcrumb_separator       : ">"
   menu_label                 :
   toc_label                  : "İçindekiler"
   ext_link_label             : "Doğrudan Bağlantı"
@@ -195,7 +195,7 @@ pt: &DEFAULT_PT
   pagination_previous        : "Anterior"
   pagination_next            : "Seguinte"
   breadcrumb_home_label      : "Início"
-  breadcrumb_separator       : "/"
+  breadcrumb_separator       : ">"
   menu_label                 :
   toc_label                  : "Nesta Página"
   ext_link_label             : "Link Direto"
@@ -236,7 +236,7 @@ pt-BR:
   pagination_previous        : "Anterior"
   pagination_next            : "Próxima"
   breadcrumb_home_label      : "Home"
-  breadcrumb_separator       : "/"
+  breadcrumb_separator       : ">"
   menu_label                 :
   toc_label                  : "Nesta página"
   ext_link_label             : "Link direto"
@@ -277,7 +277,7 @@ it: &DEFAULT_IT
   pagination_previous        : "Precedente"
   pagination_next            : "Prossima"
   breadcrumb_home_label      : "Home"
-  breadcrumb_separator       : "/"
+  breadcrumb_separator       : ">"
   menu_label                 :
   toc_label                  : "Indice della pagina"
   ext_link_label             : "Link"
@@ -320,7 +320,7 @@ zh: &DEFAULT_ZH_HANS
   pagination_previous        : "向前"
   pagination_next            : "向后"
   breadcrumb_home_label      : "首页"
-  breadcrumb_separator       : "/"
+  breadcrumb_separator       : ">"
   menu_label                 : "切换菜单"
   toc_label                  : "在本页上"
   ext_link_label             : "直接链接"
@@ -363,7 +363,7 @@ zh-TW: &DEFAULT_ZH_HANT
   pagination_previous        : "較舊"
   pagination_next            : "較新"
   breadcrumb_home_label      : "首頁"
-  breadcrumb_separator       : "/"
+  breadcrumb_separator       : ">"
   menu_label                 : "切換選單"
   toc_label                  : "本頁"
   ext_link_label             : "外部連結"
@@ -406,7 +406,7 @@ de: &DEFAULT_DE
   pagination_previous        : "Vorherige"
   pagination_next            : "Nächste"
   breadcrumb_home_label      : "Start"
-  breadcrumb_separator       : "/"
+  breadcrumb_separator       : ">"
   menu_label                 : "Menü ein-/ausschalten"
   toc_label                  : "Auf dieser Seite"
   ext_link_label             : "Direkter Link"
@@ -461,7 +461,7 @@ ne: &DEFAULT_NE
   pagination_previous        : "अघिल्लो"
   pagination_next            : "अर्को"
   breadcrumb_home_label      : "गृह"
-  breadcrumb_separator       : "/"
+  breadcrumb_separator       : ">"
   menu_label                 : "टगल मेनु"
   toc_label                  : "यो पृष्‍ठमा"
   ext_link_label             : "सिधा सम्पर्क"
@@ -504,7 +504,7 @@ ko: &DEFAULT_KO
   pagination_previous        : "이전"
   pagination_next            : "다음"
   breadcrumb_home_label      : "Home"
-  breadcrumb_separator       : "/"
+  breadcrumb_separator       : ">"
   menu_label                 : "토글 메뉴"
   toc_label                  : "On This Page"
   ext_link_label             : "직접 링크"
@@ -547,7 +547,7 @@ ru: &DEFAULT_RU
   pagination_previous        : "Предыдущая"
   pagination_next            : "Следующая"
   breadcrumb_home_label      : "Главная"
-  breadcrumb_separator       : "/"
+  breadcrumb_separator       : ">"
   menu_label                 : "Выпадающее меню"
   toc_label                  : "Содержание"
   ext_link_label             : "Прямая ссылка"
@@ -592,7 +592,7 @@ lt: &DEFAULT_LT
   pagination_previous        : "Ankstesnis"
   pagination_next            : "Sekantis"
   breadcrumb_home_label      : "Pagrindinis"
-  breadcrumb_separator       : "/"
+  breadcrumb_separator       : ">"
   menu_label                 : "Meniu rodymas"
   toc_label                  : "Turinys"
   ext_link_label             : "Tiesioginė nuoroda"
@@ -635,7 +635,7 @@ gr: &DEFAULT_GR
   pagination_previous        : "Προηγούμενo"
   pagination_next            : "Επόμενo"
   breadcrumb_home_label      : "Αρχική"
-  breadcrumb_separator       : "/"
+  breadcrumb_separator       : ">"
   menu_label                 : "Μενού"
   toc_label                  : "Περιεχόμενα"
   ext_link_label             : "Εξωτερικός Σύνδεσμος"
@@ -680,7 +680,7 @@ sv: &DEFAULT_SV
   pagination_previous        : "Föregående"
   pagination_next            : "Nästa"
   breadcrumb_home_label      : "Hem"
-  breadcrumb_separator       : "/"
+  breadcrumb_separator       : ">"
   menu_label                 : "Meny ridå"
   toc_label                  : "På denna sida"
   ext_link_label             : "Direkt länk"
@@ -725,7 +725,7 @@ nl: &DEFAULT_NL
   pagination_previous        : "Vorige"
   pagination_next            : "Volgende"
   breadcrumb_home_label      : "Home"
-  breadcrumb_separator       : "/"
+  breadcrumb_separator       : ">"
   menu_label                 : "Wissel Menu"
   toc_label                  : "Op deze pagina"
   ext_link_label             : "Directe Link"
@@ -770,7 +770,7 @@ id: &DEFAULT_ID
   pagination_previous        : "Kembali"
   pagination_next            : "Maju"
   breadcrumb_home_label      : "Home"
-  breadcrumb_separator       : "/"
+  breadcrumb_separator       : ">"
   menu_label                 : "Menu Toggle"
   toc_label                  : "Pada Halaman Ini"
   ext_link_label             : "Link langsung"
@@ -813,7 +813,7 @@ vi: &DEFAULT_VI
   pagination_previous        : "Trước"
   pagination_next            : "Sau"
   breadcrumb_home_label      : "Trang chủ"
-  breadcrumb_separator       : "/"
+  breadcrumb_separator       : ">"
   menu_label                 : "Menu"
   toc_label                  : "Tại trang này"
   ext_link_label             : "Đường dẫn trực tiếp"
@@ -856,7 +856,7 @@ da: &DEFAULT_DA
   pagination_previous        : "Forrige"
   pagination_next            : "Næste"
   breadcrumb_home_label      : "Home"
-  breadcrumb_separator       : "/"
+  breadcrumb_separator       : ">"
   menu_label                 : "Vis/skjul menu"
   toc_label                  : "På denne side"
   ext_link_label             : "Direkte link"
@@ -902,7 +902,7 @@ pl: &DEFAULT_PL
   pagination_previous        : "Poprzednia"
   pagination_next            : "Następna"
   breadcrumb_home_label      : "Strona główna"
-  breadcrumb_separator       : "/"
+  breadcrumb_separator       : ">"
   menu_label                 : "Przełącz menu"
   toc_label                  : "Spis treści"
   ext_link_label             : "Link bezpośredni"
@@ -945,7 +945,7 @@ ja: &DEFAULT_JA
   pagination_previous        : "前へ"
   pagination_next            : "次へ"
   breadcrumb_home_label      : "ホーム"
-  breadcrumb_separator       : "/"
+  breadcrumb_separator       : ">"
   menu_label                 : "メニュー"
   toc_label                  : "目次"
   ext_link_label             : "リンク"
@@ -990,7 +990,7 @@ sk: &DEFAULT_SK
   pagination_previous        : "Predošlá"
   pagination_next            : "Ďalšia"
   breadcrumb_home_label      : "Domov"
-  breadcrumb_separator       : "/"
+  breadcrumb_separator       : ">"
   menu_label                 : "Menu"
   toc_label                  : "Obsah"
   ext_link_label             : "Priamy odkaz"
@@ -1036,7 +1036,7 @@ hu: &DEFAULT_HU
   pagination_previous        : "Előző"
   pagination_next            : "Következő"
   breadcrumb_home_label      : "Kezdőlap"
-  breadcrumb_separator       : "/"
+  breadcrumb_separator       : ">"
   menu_label                 : "Menü nyit/zár"
   toc_label                  : "Ezen az oldalon"
   ext_link_label             : "Közvetlen Link"
