Gitignore changes config updated with missing atom feed file dev config added (in case someone really wants to test the page offline and play with it)

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
+.vscode
 *.gem
 *.sublime-project
 *.sublime-workspace
@@ -12,3 +13,5 @@ example/_site
 Gemfile.lock
 node_modules
 npm-debug.log*
+_includes/toc.html
+s3_website.yml
