Bio picture changed description changed

--- a/_config.yml
+++ b/_config.yml
@@ -100,7 +100,7 @@ analytics:
 author:
   name             : "CHEF-KOCH"
   avatar           : /assets/images/bio-photo.jpg # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
-  bio              : "Tech noob..."
+  bio              : "Page...<br>under<br>construction<br>...!"
   location         : "Lausanne, Swiss"
   email            : "CHEF-KOCH@protonmail.com"
   uri              : # fixme
